// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SubscriptionAmount /> should abbreviate known intervals when isIntervalAbbreviated prop is passed 1`] = `
<div
  class="amountWrapper"
>
  <span
    class="amount"
  >
    €1,000
     
    / 
    mo
  </span>
</div>
`;

exports[`<SubscriptionAmount /> should abbreviate known intervals when isIntervalAbbreviated prop is passed 2`] = `
<div
  class="amountWrapper"
>
  <span
    class="amount"
  >
    €1,000
     
    / 
    yr
  </span>
</div>
`;

exports[`<SubscriptionAmount /> should format amount 1`] = `
<div
  class="amountWrapper"
>
  <span
    class="amount"
  >
    €1,000
     
    / 
    week
  </span>
</div>
`;

exports[`<SubscriptionAmount /> should format full amount 1`] = `
<div
  class="amountWrapper"
>
  <span
    class="amount"
  >
    <span
      class="fullAmount"
    >
      €2,000
    </span>
    <wbr />
     
    / 
    week
  </span>
</div>
`;

exports[`<SubscriptionAmount /> should not abbreviate unknown intervals when isIntervalAbbreviated prop is passed 1`] = `
<div
  class="amountWrapper"
>
  <span
    class="amount"
  >
    €1,000
     
    / 
    week
  </span>
</div>
`;

exports[`<SubscriptionAmount /> should render 1`] = `
<div
  class="amountWrapper"
>
  <span
    class="amount"
  >
     
    / 
    week
  </span>
</div>
`;

exports[`<SubscriptionAmount /> should render tooltip content 1`] = `
<div>
  <div>
    Tooltip content
  </div>
</div>
`;

exports[`<SubscriptionAmount /> should render with full amount 1`] = `
<div
  class="amountWrapper"
>
  <span
    class="amount"
  >
    <span
      class="fullAmount"
    >
      €2,000
    </span>
    <wbr />
    €1,000
     
    / 
    week
  </span>
</div>
`;
